--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: python
-python: 2.7
+python: 2.7 3.6
 sudo: false
 env:
     - TOX_ENV=py27
-    - TOX_ENV=py33
+    - TOX_ENV=py36
     - TOX_ENV=flake8
     - TOX_ENV=docs
+    - TOX_ENV=demo
     global:
         - secure: access_token=XXXXX
 install:
-    - pip install coverage nose mock python-coveralls tox
+    - pip install coverage python-coveralls tox
 script:
     - tox -e $TOX_ENV
 after_success:
