--- a/tox.ini
+++ b/tox.ini
@@ -1,27 +1,67 @@
 [tox]
-envlist = py27,flake8
+envlist=py27,py36
 
-[flake8]
-exclude = venv/*,docs/*
+[testenv:run]
+usedevelop=True
+commands=demo
 
-[testenv]
-usedevelop = True
-commands =
-    python --version
-    nosetests --with-coverage --cover-package=demo demo {posargs}
-deps = -rtest-requirements.txt
-install_command = pip install --process-dependency-links --pre {opts} {packages}
+[testenv:dist]
+usedevelop=True
+commands=python setup.py bdist_wheel --universal
+         python setup.py sdist
+         python setup.py bdist_egg
 
-[testenv:py33]
-deps = -rtest-requirements.txt
+[testenv:clean]
+skipsdist=true
+skip_install=true
+whitelist_externals=bash
+commands=
+    bash -c "rm -Rf venv"
+    bash -c "rm -Rf *egg*"
+    bash -c "rm -Rf dist*"
+    bash -c "rm -Rf build*"
+    bash -c "rm -Rf docs/_build/*"
+    bash -c "rm -Rf *.tar.gz"
+    bash -c "rm -Rf .tox"
+    bash -c "rm -Rf **/*__pycache__"
+    bash -c "rm -Rf **/*.pyc"
 
 [testenv:flake8]
-commands = flake8
-deps =
-    flake8
+skipsdist=true
+skip_install=true
+deps=-rrequirements.txt
+commands=flake8 {posargs: .}
 
 [testenv:docs]
-commands = sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
-deps =
-    Sphinx
-    sphinx_rtd_theme
+skipsdist=true
+deps=-rrequirements.txt
+skip_install=true
+commands=sphinx-build -a -n -b html -d docs/_build/doctrees docs docs/_build/html
+
+# Create dist, egg dirs, upload package to pypi
+[testenv:pypi]
+usedevelop=True
+commands=python setup.py sdist upload -r pypi
+         python setup.py bdist_egg upload -r pypi
+         python setup.py bdist_wheel upload -r pypi
+
+# Create dist, egg dirs, upload package to testpypi
+[testenv:testpypi]
+usedevelop=True
+commands=python setup.py sdist upload -r testpypi
+         python setup.py bdist_egg upload -r testpypi
+         python setup.py bdist_wheel upload -r testpypi
+
+# Register this project to Python Package Index
+[testenv:pypi-register]
+skipsdist=true
+skip_install=true
+usedevelop=True
+commands=python setup.py register -r pypi
+
+# Register this project to Test Python Package Index
+[testenv:testpypi-register]
+skipsdist=true
+skip_install=true
+usedevelop=True
+commands=python setup.py register -r testpypi
